# OnionmixerChatManager

./: .gitignore  CMakeLists.txt  FIX_BotManager.md  PLAN_DEV.md  README.md  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: build.yml
BroadChatClient/: CMakeLists.txt  README.md
BroadChatClient/resources/: app_icon.rc  broadchatclient.qrc  onionmixer-bcc.desktop
BroadChatClient/resources/icons/: tray_icon.icns
BroadChatClient/src/: BroadChatClientApp.cpp  BroadChatClientApp.h  BroadChatConnection.cpp  BroadChatConnection.h  main.cpp  version.h.in
BroadChatClient/src/config/: ConfigPathResolver.cpp  ConfigPathResolver.h  IniValidator.cpp  IniValidator.h
BroadChatClient/src/i18n/: ClientLanguage.cpp  ClientLanguage.h
BroadChatClient/src/ui/: ClientConfigDialog.cpp  ClientConfigDialog.h  MainBroadcastWindow.cpp  MainBroadcastWindow.h  OverlayLayout.cpp  OverlayLayout.h
BroadChatClient/test/: CMakeLists.txt  MockServer.cpp  MockServer.h  tst_broadcast_window_flags.cpp  tst_client_settings.cpp  tst_config_resolver.cpp  tst_connection_integration.cpp  tst_ini_validator.cpp  tst_overlay_layout.cpp  tst_protocol_fuzz.cpp  tst_reconnect_backoff.cpp
BroadChatClient/translations/: onionmixerbroadchatclient_en_US.ts  onionmixerbroadchatclient_ja_JP.ts  onionmixerbroadchatclient_ko_KR.ts
config/: app.ini  app.ini.example  tokens.ini  tokens.ini.example
docs/: CHANGELOG.md  operator-checklist.md  troubleshooting.md  vpn-guide.md
proto/: stream_list.proto
resources/: app_icon.rc  onionmixer-chat-manager.desktop  onionmixer-chat-manager.qrc
scripts/: package-deb.sh  package-windows.ps1
src/app/: main.cpp
src/auth/: OAuthLocalServer.cpp  OAuthLocalServer.h  OAuthTokenClient.cpp  OAuthTokenClient.h  PkceUtil.cpp  PkceUtil.h  TokenManager.cpp  TokenManager.h  TokenVault.cpp  TokenVault.h
src/config/: AppSettings.cpp  AppSettings.h
src/core/: ActionExecutor.cpp  ActionExecutor.h  AppTypes.h  BroadChatServer.cpp  BroadChatServer.h  ClientSession.cpp  ClientSession.h  ConnectionCoordinator.cpp  ConnectionCoordinator.h  Constants.h  EmojiImageCache.cpp  EmojiImageCache.h  IChatPlatformAdapter.h  PlatformTraits.h
src/i18n/: AppLanguage.cpp  AppLanguage.h
src/platform/chzzk/: ChzzkAdapter.cpp  ChzzkAdapter.h  ChzzkEmojiResolver.cpp  ChzzkEmojiResolver.h  ChzzkEndpoints.h
src/platform/youtube/: EmojiImageCache.cpp  YouTubeAdapter.cpp  YouTubeAdapter.h  YouTubeChatMessageParser.cpp  YouTubeChatMessageParser.h  YouTubeEndpoints.h  YouTubeLiveChatWebClient.cpp  YouTubeLiveChatWebClient.h  YouTubeLiveDiscovery.cpp  YouTubeLiveDiscovery.h  YouTubeStreamListClient.cpp  YouTubeStreamListClient.h  YouTubeUrlUtils.cpp  YouTubeUrlUtils.h
src/shared/: BroadChatEndpoint.cpp  BroadChatEndpoint.h  BroadChatLogging.cpp  BroadChatLogging.h  BroadChatProtocol.cpp  BroadChatProtocol.h  BroadChatVersion.h.in
src/ui/: BroadcastChatWindow.cpp  BroadcastChatWindow.h  ChatBubbleDelegate.cpp  ChatBubbleDelegate.h  ChatBubbleWidget.cpp  ChatBubbleWidget.h  ChatDisplayController.cpp  ChatDisplayController.h  ChatMessageModel.cpp  ChatMessageModel.h  ChatterListDialog.cpp  ChatterListDialog.h  ChatterStatsManager.cpp  ChatterStatsManager.h  ConfigurationDialog.cpp  ConfigurationDialog.h  EmojiTextDocument.cpp  EmojiTextDocument.h  MainWindow.cpp  MainWindow.h  ViewerCountStyle.cpp  ViewerCountStyle.h
src/utils/: JsonHelper.cpp  JsonHelper.h
tests/: test_YouTubeUrlUtils.cpp
translations/: botmanager_en_US.ts  botmanager_ja_JP.ts  botmanager_ko_KR.ts  onionmixerchatmanager_en_US.ts  onionmixerchatmanager_ja_JP.ts  onionmixerchatmanager_ko_KR.ts
